# statement2csv

./: LICENSE  README.md  setup.cfg
src/statement2csv/: Statement.py  sttmt2csv.py
