[metadata]
# replace with your username:
name = statement2csv
version = 0.0.1
author = BennyDeb
author_email = bennydeb@gmail.com.com
description = A package for reading statements' transactions from pdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bennydeb/statement2csv
project_urls =
    Bug Tracker = https://github.com/bennydeb/statement2csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src